--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img src="/public/logo.png">
         <h1>Vue.js Cinema</h1>
     </div>
+    <router-view v-bind:day="day" v-bind:genre="genre" v-bind:time="time" v-bind:movies="movies"></router-view>
 </div>
 <script src="/dist/build.js"></script>
 </body>
